--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -100,39 +100,33 @@ body {
   font-family: Circle, system-ui, sans-serif;
   line-height: normal;
   vertical-align: baseline;
+  display: inline-block;
+  margin-left: 0.25rem;
 }
 
 @supports (selector(:has(*))) {
-  .result-streaming > :is(ul, ol):last-child > li:last-child:not(:has(* > li)):after,
-  .result-streaming
-    > :is(ul, ol):last-child
-    > li:last-child
-    > :is(ul, ol):last-child
-    > li:last-child:after,
-  .result-streaming
-    > :is(ul, ol):last-child
-    > li:last-child
-    > :is(ul, ol):last-child
-    > li:last-child
-    > :is(ul, ol):last-child
-    > li:last-child:after,
-  .result-streaming > :is(ul, ol):last-child > li:last-child:has(p):after {
+  .result-streaming :is(ul, ol):last-child li:last-child:not(:has(li)):after,
+  .result-streaming :is(ul, ol):not(:last-child) li:last-child:not(:has(li)):after {
+    content: none;
+  }
+
+  .result-streaming :is(ul, ol):last-child li:last-child:not(:has(li)) > :last-child:after {
     content: "●";
     font-family: Circle, system-ui, sans-serif;
     line-height: normal;
     vertical-align: baseline;
+    display: inline-block;
     margin-left: 0.25rem;
   }
 }
 
 @supports not (selector(:has(*))) {
-  .result-streaming > ol:last-child > li:last-child:after,
-  .result-streaming > ul:last-child > li:last-child:after,
-  .result-streaming > ul:last-child > li:last-child > p:last-child:after {
+  .result-streaming :is(ul, ol):last-child li:last-child > :last-child:after {
     content: "●";
     font-family: Circle, system-ui, sans-serif;
     line-height: normal;
     vertical-align: baseline;
+    display: inline-block;
     margin-left: 0.25rem;
   }
 }
